@@ -4,13 +4,13 @@ import io.github.nizos.tddguard.junit5.model.TestCase;
 import io.github.nizos.tddguard.junit5.model.TestError;
 import io.github.nizos.tddguard.junit5.model.TestModule;
 import io.github.nizos.tddguard.junit5.model.TestResult;
+import io.github.nizos.tddguard.junit5.model.UnhandledError;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
 
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -51,8 +51,7 @@ class TestJsonWriterTest {
         TestResult result = new TestResult(List.of(
                 new TestModule("com.example.MyTest", List.of(
                         TestCase.failed("shouldFail", "com.example.MyTest::shouldFail",
-                                List.of(new TestError("expected true but was false")))
-                ))
+                                List.of(new TestError("expected true but was false")))))
         ));
 
         String json = writer.serialize(result);
@@ -66,8 +65,7 @@ class TestJsonWriterTest {
     void serializesSkippedTest() {
         TestResult result = new TestResult(List.of(
                 new TestModule("com.example.MyTest", List.of(
-                        TestCase.skipped("shouldSkip", "com.example.MyTest::shouldSkip")
-                ))
+                        TestCase.skipped("shouldSkip", "com.example.MyTest::shouldSkip")))
         ));
 
         String json = writer.serialize(result);
@@ -78,10 +76,9 @@ class TestJsonWriterTest {
     @Test
     void omitsErrorsFieldForPassedAndSkippedTests() {
         TestResult result = new TestResult(List.of(
-                new TestModule("com.example.MyTest", Arrays.asList(
+                new TestModule("com.example.MyTest", List.of(
                         TestCase.passed("a", "com.example.MyTest::a"),
-                        TestCase.skipped("b", "com.example.MyTest::b")
-                ))
+                        TestCase.skipped("b", "com.example.MyTest::b")))
         ));
 
         String json = writer.serialize(result);
@@ -94,11 +91,9 @@ class TestJsonWriterTest {
         TestResult result = new TestResult(List.of(
                 new TestModule("com.example.FirstTest", List.of(
                         TestCase.passed("a", "com.example.FirstTest::a"),
-                        TestCase.passed("b", "com.example.FirstTest::b")
-                )),
+                        TestCase.passed("b", "com.example.FirstTest::b"))),
                 new TestModule("com.example.SecondTest", List.of(
-                        TestCase.passed("c", "com.example.SecondTest::c")
-                ))
+                        TestCase.passed("c", "com.example.SecondTest::c")))
         ));
 
         String json = writer.serialize(result);
@@ -112,8 +107,7 @@ class TestJsonWriterTest {
         TestResult result = new TestResult(List.of(
                 new TestModule("com.example.MyTest", List.of(
                         TestCase.failed("test", "com.example.MyTest::test",
-                                List.of(new TestError("expected \"foo\" but got \"bar\"")))
-                ))
+                                List.of(new TestError("expected \"foo\" but got \"bar\"")))))
         ));
 
         String json = writer.serialize(result);
@@ -127,8 +121,7 @@ class TestJsonWriterTest {
         TestResult result = new TestResult(List.of(
                 new TestModule("com.example.MyTest", List.of(
                         TestCase.failed("test", "com.example.MyTest::test",
-                                List.of(new TestError("line1\nline2\ttabbed")))
-                ))
+                                List.of(new TestError("line1\nline2\ttabbed")))))
         ));
 
         String json = writer.serialize(result);
@@ -141,8 +134,7 @@ class TestJsonWriterTest {
         TestResult result = new TestResult(List.of(
                 new TestModule("com.example.MyTest", List.of(
                         TestCase.failed("test", "com.example.MyTest::test",
-                                List.of(new TestError("path\\to\\file")))
-                ))
+                                List.of(new TestError("path\\to\\file")))))
         ));
 
         String json = writer.serialize(result);
@@ -154,8 +146,7 @@ class TestJsonWriterTest {
     void writesFileAtomically(@TempDir Path tmp) throws IOException {
         TestResult result = new TestResult(List.of(
                 new TestModule("com.example.MyTest", List.of(
-                        TestCase.passed("a", "com.example.MyTest::a")
-                ))
+                        TestCase.passed("a", "com.example.MyTest::a")))
         ));
 
         writer.write(tmp, result);
@@ -174,5 +165,93 @@ class TestJsonWriterTest {
         writer.write(nested, result);
 
         assertTrue(Files.exists(nested.resolve("test.json")));
+    }
+    @Test
+    void serializesReasonWhenPresent() {
+        TestResult result = new TestResult(Collections.emptyList(), "passed");
+
+        String json = writer.serialize(result);
+
+        assertTrue(json.contains("\"reason\": \"passed\""));
+    }
+
+    @Test
+    void omitsReasonWhenNull() {
+        TestResult result = new TestResult(Collections.emptyList());
+
+        String json = writer.serialize(result);
+
+        assertTrue(!json.contains("\"reason\""));
+    }
+
+    @Test
+    void serializesStackWhenPresent() {
+        TestResult result = new TestResult(List.of(
+                new TestModule("com.example.MyTest", List.of(
+                        TestCase.failed("test", "com.example.MyTest::test",
+                                List.of(new TestError("boom",
+                                        "com.example.MyTest.test(MyTest.java:42)")))
+                ))
+        ));
+
+        String json = writer.serialize(result);
+
+        assertTrue(json.contains("\"stack\": \"com.example.MyTest.test(MyTest.java:42)\""));
+    }
+
+    @Test
+    void omitsStackWhenNull() {
+        TestResult result = new TestResult(List.of(
+                new TestModule("com.example.MyTest", List.of(
+                        TestCase.failed("test", "com.example.MyTest::test",
+                                List.of(new TestError("boom")))
+                ))
+        ));
+
+        String json = writer.serialize(result);
+
+        assertTrue(!json.contains("\"stack\""));
+    }
+
+    @Test
+    void serializesUnhandledErrorsWhenPresent() {
+        TestResult result = new TestResult(
+                Collections.emptyList(),
+                "failed",
+                List.of(new UnhandledError(
+                        "java.lang.RuntimeException",
+                        "teardown blew up",
+                        "com.example.MyTest.tearDownAll(MyTest.java:31)"))
+        );
+
+        String json = writer.serialize(result);
+
+        assertTrue(json.contains("\"unhandledErrors\": ["));
+        assertTrue(json.contains("\"name\": \"java.lang.RuntimeException\""));
+        assertTrue(json.contains("\"message\": \"teardown blew up\""));
+        assertTrue(json.contains("\"stack\": \"com.example.MyTest.tearDownAll(MyTest.java:31)\""));
+    }
+
+    @Test
+    void omitsUnhandledErrorsKeyWhenListIsEmpty() {
+        TestResult result = new TestResult(Collections.emptyList());
+
+        String json = writer.serialize(result);
+
+        assertTrue(!json.contains("\"unhandledErrors\""));
+    }
+
+    @Test
+    void omitsUnhandledErrorStackWhenNull() {
+        TestResult result = new TestResult(
+                Collections.emptyList(),
+                "failed",
+                List.of(new UnhandledError("java.lang.RuntimeException", "boom"))
+        );
+
+        String json = writer.serialize(result);
+
+        assertTrue(json.contains("\"unhandledErrors\": ["));
+        assertTrue(!json.contains("\"stack\""));
     }
 }
